[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yuzhanin-bot"
version = "1.0.0"
dependencies = [
    "aiogram==3.10.0",
    "aiohttp==3.9.5",
    "requests==2.31.0",
    "python-dotenv==1.0.0",
    "pytz==2023.3.post1"
]

[project.scripts]
start = "ujzhan_bot_Version5:main"